# Pigeon-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  notes.txt  readme.txt
.cache/clangd/index/: BoundingBox.cpp.5D4E8EA75DB797C5.idx  BoundingBox.cpp.66E44AE1473E7091.idx  BoundingBox.cpp.6F2B60D00FDC3743.idx  BoundingBox.h.2954C7B442253FA7.idx  BoundingBox.h.6365AE0E1A46E1A9.idx  BoundingBox.h.BFEBBF0AA64214F1.idx  Camera.h.98AF288EFF85F28F.idx  Camera.h.BCA1652233483E51.idx  Camera.h.D9B7981A86F56EE7.idx  Camera.h.F0A3B74CC9BFC12D.idx  Cube.h.4722A7F71B05357F.idx  GeoManager.h.C20D858B81A7C55E.idx  Grid.h.B6520EBF6645AA72.idx  IMGUIManager.h.30CAAFD72953B3D0.idx  IMGUIManager.h.A3F7B0C751C6E306.idx  IMGUIManager.h.F6A32AA34F40E30E.idx  Image.h.CFF7F77082AF65D3.idx  Importer.hpp.D936BCA0FF3D32BA.idx  MathFunctions.h.B9A2AF92222504C4.idx  Model.h.A616ECBE3210A5CF.idx  Model.h.DBC0C93926987C61.idx  Model.h.EDBCBCD76B192A76.idx  (+657 more)
assets/Shaders/: bird.fs  bird.vs  lava.fs  lava.vs  normalModel.fs  normalModel.vs  pyramid.fs  pyramid.vs  skybox.fs  sphere.fs  sphere.vs  test.fs  test.vs  testvox.fs  testvox.vs  vor.fs  vor.vs  voxel.fs  voxel.vs  voxel_inst.fs  voxel_inst.vs  wave.vs
include/: Camera.h  Cube.h  GeoManager.h  Grid.h  IMGUIManager.h  Image.h  Model.h  ObjectRendererManager.h  Particle.h  PigeonEngine.h  ScreenEffect.h  Shader.h  Sphere.h  Variables.h  Voronoi.h  Voxel.h  VoxelTest.h  animation.h  bird.h  firstMesh.h  firstModel.h  mesh.h  modelLoader.h  pyramid.h  textureManager.h
resources/Shaders/: advancedwater.vs  cube.fs  cube.vs  grid.fs  gridWater.fs  gridWater.vs  model.fs  model.vs  mountain.fs  mountain.vs  normalCube.fs  normalCube.vs  normalModel.fs  normalModel.vs  particle.fs  particle.vs  plane.fs  plane.vs  screen.fs  screen.vs  skybox.fs  water.fs  water.vs  window.fs
src/: BoundingBox.cpp  ModelManager.cpp  ObjectGenerationIMGUI.cpp  ObjectRenderer.cpp  ScreenEffect.cpp  Variables.cpp  Voronoi.cpp  VoxelChunk.cpp  bird.cpp  filemanager.cpp  geoDrawer.cpp  main.cpp  testVoxel.cpp  textureManager.cpp
(+9 files in other folders)
